working second layout

--- a/src/layout.module.css
+++ b/src/layout.module.css
@@ -1,7 +1,7 @@
 .outer {
   display: flex;
   position: relative;
-  background-color: lightblue;
+  user-select: none;
 }
 .outer.dialog {
   position: absolute;
