--- a/src/list.module.css
+++ b/src/list.module.css
@@ -1,15 +1,21 @@
 .outer {
+  --width: 220px;
+  --height: 240px;
+  --gap: 30px;
+  --radius: 10px;
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(auto-fit, 200px);
-  gap: 10px;
-  padding: 10px;
+  grid-template-columns: repeat(auto-fit, var(--width));
+  gap: var(--gap);
+  padding: var(--gap);
 }
 .card {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 200px;
-  height: 200px;
-  background-color: antiquewhite;
+  width: var(--width);
+  height: var(--height);
+  border-radius: var(--radius);
+  background: #ffffff;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
 }
