--- a/src/map.module.css
+++ b/src/map.module.css
@@ -1,15 +1,51 @@
 .outer {
-  background-color: beige;
-  max-height: 100vh;
-  width: 100%;
   position: sticky;
   top: 0;
+  width: 100%;
+  max-height: 100vh;
+  /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+}
+.map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  background-color: beige;
+}
+.dragBar {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 25px;
+  z-index: 2;
+  touch-action: none;
+  justify-content: center;
+}
+.drag {
+  width: 50px;
+  height: 5px;
+  background-color: rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  margin: 10px;
 }
 
 @media (max-width: 600px) {
   .outer {
-    position: absolute;
-    top: 100%;
     min-height: 300px;
+  }
+  .outer.dialog {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    border-radius: 10px 10px 0 0;
+    /* transform: translateY(calc(100vh - 75px)); */
+  }
+  .outer.dialog .dragBar {
+    display: flex;
   }
 }
