--- a/src/map.module.css
+++ b/src/map.module.css
@@ -13,6 +13,7 @@
   right: 0;
   z-index: 1;
   background-color: beige;
+  filter: saturate(0.15) hue-rotate(100deg) contrast(1.2);
 }
 .dragBar {
   display: none;
@@ -20,32 +21,34 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 25px;
+  height: 75px;
   z-index: 2;
   touch-action: none;
   justify-content: center;
 }
 .drag {
-  width: 50px;
+  width: 100px;
   height: 5px;
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.5);
   border-radius: 3px;
   margin: 10px;
+  transition: background 320ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.dragBar:hover .drag {
+  background-color: rgba(0, 0, 0, 1);
 }
 
-@media (max-width: 600px) {
-  .outer {
-    min-height: 300px;
-  }
-  .outer.dialog {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    border-radius: 10px 10px 0 0;
-    /* transform: translateY(calc(100vh - 75px)); */
-  }
-  .outer.dialog .dragBar {
-    display: flex;
-  }
+.narrow {
+  min-height: 300px;
+}
+.narrow.dialog {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  border-radius: 10px 10px 0 0;
+  /* transform: translateY(calc(100vh - 75px)); */
+}
+.narrow.dialog .dragBar {
+  display: flex;
 }
