--- a/src/map.module.css
+++ b/src/map.module.css
@@ -3,7 +3,6 @@
   top: 0;
   width: 100%;
   max-height: 100vh;
-  /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .map {
   position: absolute;
@@ -41,13 +40,16 @@
 .narrow {
   min-height: 300px;
 }
+.narrow.cover {
+  position: absolute;
+  top: 60px;
+  left: 0;
+}
 .narrow.dialog {
   position: fixed;
   top: 0;
   left: 0;
   height: 100vh;
-  border-radius: 10px 10px 0 0;
-  /* transform: translateY(calc(100vh - 75px)); */
 }
 .narrow.dialog .dragBar {
   display: flex;
