--- a/src/map.module.css
+++ b/src/map.module.css
@@ -4,6 +4,8 @@
   width: 100%;
   max-height: 100vh;
   user-select: none;
+  will-change: transform;
+  contain: layout paint size style;
 }
 .map {
   position: absolute;
