--- a/src/map.module.css
+++ b/src/map.module.css
@@ -48,6 +48,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  border-radius: 10px 10px 0 0;
 }
 .narrow.dialog .dragBar {
   display: flex;
@@ -58,5 +59,6 @@
   top: 20px;
   left: 0;
   right: 0;
+  z-index: 2;
   text-align: center;
 }
