--- a/src/map.module.css
+++ b/src/map.module.css
@@ -2,7 +2,8 @@
   position: sticky;
   top: 0;
   width: 100%;
-  max-height: 100vh;
+  height: 100vh;
+  max-height: stretch;
   user-select: none;
   will-change: transform;
   contain: layout paint size style;
@@ -42,7 +43,7 @@
 
 .narrow {
   height: 100vh;
-  max-height: -webkit-fill-available;
+  max-height: stretch;
 }
 .narrow.dialog {
   position: fixed;
