--- a/src/merchant.module.css
+++ b/src/merchant.module.css
@@ -15,6 +15,7 @@
 .image > img {
   object-fit: cover;
   width: 100%;
+  height: 100%;
   border-radius: var(--radius) var(--radius) 0 0;
   pointer-events: none;
   touch-action: none;
