--- a/src/widget.module.css
+++ b/src/widget.module.css
@@ -18,11 +18,10 @@
 }
 .dialog {
   height: 600px;
-  max-height: 100vh;
+  max-height: stretch;
   flex: 1 1 auto;
   max-width: 1080px;
   min-width: 320px;
-
   border-radius: 6px;
   overflow: hidden;
   box-shadow: 0 25px 80px rgba(0, 0, 0, 0.5);
@@ -39,6 +38,5 @@
 @media (max-width: 600px) {
   .dialog {
     height: 100vh;
-    max-height: -webkit-fill-available;
   }
 }
