--- a/src/merchant.module.css
+++ b/src/merchant.module.css
@@ -1,27 +1,58 @@
 .outer {
+  position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   border-radius: var(--radius);
   background: #ffffff;
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
   contain: layout paint style;
 }
 .image {
-  align-self: stretch;
   aspect-ratio: 3/2;
   overflow: hidden;
+  background-color: #f3f3f3;
 }
 .image > img {
-  object-fit: cover;
   width: 100%;
   height: 100%;
+  object-fit: cover;
   border-radius: var(--radius) var(--radius) 0 0;
   pointer-events: none;
   touch-action: none;
 }
+.label {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  padding: 5px 10px;
+  font-weight: 500;
+  line-height: 16px;
+  font-size: 13px;
+  background-color: #d32222;
+  color: #fff;
+  border-radius: 8px;
+}
 .content {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 15px;
+}
+.title {
+  padding-bottom: 5px;
+  line-height: 18px;
+  font-weight: 600;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #d32222;
+}
+.name {
+  line-height: 18px;
+  font-weight: 500;
+  font-size: 16px;
+  color: #333;
+}
+.stars {
+  white-space: nowrap;
+  color: #222;
 }
